# aiforecastts

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
aiforecastts/: __init__.py  core.py
aiforecastts/agents/: __init__.py  forecasting_agent.py
aiforecastts/analytics/: __init__.py  evaluator.py  features.py  processor.py
aiforecastts/backtesting/: backtester.py
aiforecastts/models/: __init__.py  ensemble.py  hgr.py  statistical.py
aiforecastts/visualization/: __init__.py  plots.py
tests/: test_core.py
ts_library/: __init__.py  core.py
