[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiforecastts"
version = "0.1.0"
authors = [{ name = "Tuan Anh Tran", email = "tuanthescientist@gmail.com" }]
description = "AI-powered Time Series Forecasting Library"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "statsmodels>=0.14",
    "prophet>=1.1",
    "pmdarima>=2.0",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "ta>=0.11",
    "joblib>=1.3",
]

[project.urls]
Homepage = "https://github.com/tuanthescientist/aiforecastts"
"Bug Tracker" = "https://github.com/tuanthescientist/aiforecastts/issues"

[tool.setuptools.packages.find]
where = ["ts_library"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
    "build",
    "twine",
]
